--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,7 @@ Flask-SQLAlchemy==3.1.1
 Flask-Cors==6.0.1
 mysql-connector-python==9.4.0
 python-dotenv==1.0.0
+Werkzeug>=2.3.0
+Jinja2>=3.1.0
+itsdangerous>=2.1.0
+click>=8.1.0
